# NASCO-analysis

./: .gitignore  LICENSE  Planet_OTF.py  README.md  pyproject.toml
NASCO_analysis/: core.py  io.py  pyproject.toml
NASCO_analysis/nasco_analysis/: __init__.py  core.py  grid_convolve.py  io.py  kisa_rev.py  v_obs.py
NASCO_analysis/notebooks/: make_data_array.ipynb  test.ipynb
NASCO_analysis/tests/: test_nasco_analysis.py
docs/: conf.py  index.rst
docs/_static/css/: custom.css
nasco_analysis/: Planet_OTF.py  __init__.py  doppler.py  grid_convolve.py  io.py  kisa_rev.py
