[tool.poetry]
name = "NASCO_analysis"
version = "0.1.0"
description = ""
authors = ["r-yamada1998 <yamadier@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.7"
APLpy = "^2.0.3"
matplotlib = "^3.3.2"
astropy = "^4.1"
joblib = "^0.17.0"
numpy = "^1.19.4"
xarray = "^0.16.1"
pandas = "^1.1.4"
necstdb = "^0.2.3"
spectral-cube = "^0.5.0"
jupyter = "^1.0.0"
tqdm = "^4.51.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
flake8 = "^3.8.4"
sphinx = "^3.3.1"
sphinx-rtd-theme = "^0.5.0"
m2r2 = "^0.2.7"
ipykernel = "^5.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
